# claude-trading-skills

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  FMP_Institutional_Data_Research_2025-11-08.md  LIVE_TRADING_CHECKLIST.md  PROJECT_VISION.ja.md  PROJECT_VISION.md  PROJECT_VISION.zh.md  PR_BODY.md  README.ja.md  README.md  README.zh.md  conftest.py  pyproject.toml  skills-index.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  real_use_pitfall.yml  skill_improvement.yml  workflow_recipe.yml
.github/workflows/: ci.yml
agents/: scenario-analyst.md  strategy-reviewer.md
audits/errata/: 2026-05-17-kanchi-screening.md
breadth-chart-analyst/: SKILL.md
claude-skills-library/: CLAUDE.md  README.md  README.md.bak  README.md.bak2
claude-skills-library/bug-ticket-creator/: SKILL.md
claude-skills-library/business-analyst/: SKILL.md
claude-skills-library/data-scientist/: SKILL.md
claude-skills-library/data-visualization-expert/: SKILL.md
claude-skills-library/docs/: MERMAID_TO_PDF_README.md
claude-skills-library/itil4-consultant/: SKILL.md
claude-skills-library/mermaid-to-pdf/: SKILL.md
claude-skills-library/project-manager/: SKILL.md
claude-skills-library/project-plan-creator/: SKILL.md
claude-skills-library/salesforce-cli-expert/: SKILL.md
claude-skills-library/uat-testcase-generator/: SKILL.md
claude-skills-library/vendor-estimate-creator/: SKILL.md
claude-skills-library/vendor-estimate-reviewer/: SKILL.md
commands/: scenario-analyzer.md
config/: .env.example  screener_weights.yaml  sector_map.yaml  trading_params.yaml
data/: skills-index.yaml
day-trader/: .env.example  .gitignore  README.md  alpaca_client.py  config.py  db.py  main.py  requirements.txt  risk.py  run.sh  strategies.py  trader.py
docs/: README.md  edge_candidate_agent_design.md
launchd/: com.trade-analysis.eod-reconcile.plist  com.trade-analysis.kill-switch.plist  com.trade-analysis.macro-refresh.plist  com.trade-analysis.skill-improvement.plist  com.trade-analysis.sod-capture.plist  com.trade-analysis.trade-loop.plist
macro-indicators-dashboard/: README.md  SKILL.md
personal_tools/: .gitignore  daily_monitor.py  kospi_breakout_screener.py  vcp_detector.py
schemas/: __init__.py  artifacts.py  data_gap.py  export_json_schemas.py
scripts/: audit_log.py  bootstrap_skills_index.py  ceremony_log.py  check_package_drift_for_changed_skills.py  ci_test_matrix.py  generate_catalog.py  generate_catalog_from_index.py  generate_fmp_client.py  generate_skill_docs.py  generate_skillset_docs.py  generate_workflow_docs.py  install_alpaca_mcp.sh  manage_skill_packages.py  package_skills.py  promotion_policy.py  run_all_tests.sh  run_eod_reconcile.sh  run_kill_switch.sh  run_macro_refresh.sh  run_release_gate.py  run_skill_generation_pipeline.py  run_skill_improvement.sh  run_skill_improvement_loop.py  run_sod_capture.sh  run_trade_loop.sh  signing.py  validate_artifacts.py  validate_skills_index.py  validate_skillsets.py  validate_trading_params.py  weekly_core_collect.py  with_env.sh  workflow_runner.py
skill-packages/: backtest-expert.skill  breadth-chart-analyst.skill  breakout-trade-planner.skill  canslim-screener.skill  checksums.json  contrarian-setup-gate.skill  cot-contrarian-detector.skill  crypto-regime-analyzer.skill  data-quality-checker.skill  dividend-growth-pullback-screener.skill  downtrend-duration-analyzer.skill  drawdown-circuit-breaker.skill  dual-axis-skill-reviewer.skill  earnings-calendar.skill  earnings-trade-analyzer.skill  economic-calendar-fetcher.skill  edge-candidate-agent.skill  edge-concept-synthesizer.skill  edge-hint-extractor.skill  edge-pipeline-orchestrator.skill  edge-signal-aggregator.skill  edge-strategy-designer.skill  edge-strategy-reviewer.skill  exposure-coach.skill  finviz-screener.skill  ftd-detector.skill  futures-position-sizer.skill  fxmacrodata-calendar.skill  ibd-distribution-day-monitor.skill  institutional-flow-tracker.skill  kanchi-dividend-review-monitor.skill  kanchi-dividend-sop.skill  kanchi-dividend-us-tax-accounting.skill  macro-regime-detector.skill  market-breadth-analyzer.skill  market-environment-analysis.skill  market-news-analyst.skill  market-top-detector.skill  news-reaction-failure-analyzer.skill  options-strategy-advisor.skill  (+28 more)
skillsets/: README.md  core-portfolio.yaml  market-regime.yaml  swing-opportunity.yaml  trade-memory.yaml
universes/: europe.txt
workflows/: README.md  core-portfolio-weekly.yaml  kanchi-dividend-weekly.yaml  market-regime-daily.yaml  monthly-performance-review.yaml  multi-asset-opportunity-daily.yaml  shapiro-contrarian.yaml  stockbee-20pct-study-daily.yaml  stockbee-ep-daily.yaml  stockbee-fluency-loop.yaml  swing-opportunity-daily.yaml  trade-memory-loop.yaml
(+1131 files in other folders)
